[package]
name = "pw22-kaart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
rusttype = "0.9.2"
anyhow = "1.0.55"
serde = { version = "1", features = ["derive"] }
csv = "1.1"
